# kek5555

./: Makefile  main.py  pyproject.toml  pyproject.toml.bak
VD_games/: cli.py  engine.py
VD_games/games/: calc.py  gcd.py  prime.py  progression.py
VD_games/scripts/: VD_calc.py  VD_even.py  VD_games.py  VD_gcd.py  VD_main.py  games.py  vd_prime.py  vd_progression.py
kek5555.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
