[project]
name = "kek5555"
version = "0.1.0"
description = "VD-games project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
start = "VD_games.scripts.VD_games:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]
