[project]
name = "kek5555"
version = "0.1.0"
description = "VD-games project"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
start = "VD_games.scripts.VD_games:main"
VD-even = "VD_games.scripts.VD_even:main"
VD-calc = "VD_games.scripts.VD_calc:main"
VD-gcd = "VD_games.scripts.VD_gcd:main"
VD-progression = "VD_games.scripts.vd_progression:main"
VD-prime = "VD_games.scripts.vd_prime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501"]
